# Siesta

./: .gitignore  .gitmodules  BuildDistPackage.bat  CMakeLists.txt  GenerateProjectFiles.bat
Examples/: CMakeLists.txt
Examples/Siesta.Sandbox/Code/Private/: Main.cpp
Siesta/: CMakeLists.txt
Siesta/CMake/: Siesta.cmake  SiestaCompileOptions.cmake
Siesta/CMake/Modules/: SiestaModules.cmake
Siesta/Code/: CMakeLists.txt
Siesta/Code/Core/: CMakeLIsts.txt  SiestaCoreSiestaCore
Siesta/Code/Core/Config/: CMakeLists.txt
Siesta/Code/Core/Core/: CMakeLists.txt
Siesta/Code/Core/CoreAll/: CMakeLists.txt
Siesta/Code/Core/Object/: CMakeLists.txt
Siesta/Code/Core/Platform/: CMakeLists.txt
Siesta/Code/Core/Siesta.Config/: CMakeLists.txt
Siesta/Code/Core/Siesta.Core/: CMakeLists.txt
Siesta/Code/Core/Siesta.CoreAll/: CMakeLists.txt
Siesta/Code/Core/Siesta.Math/: CMakeLists.txt
Siesta/Code/Core/Siesta.Object/: CMakeLists.txt
Siesta/Code/Core/Siesta.PlatformCommon/: CMakeLists.txt
Siesta/Code/Core/Siesta.PlatformCommon/Private/: SiestaPlatformCommon.cpp  SiestaPlatformGLFW.cpp.inl  SiestaPlatformGLFW.h
Siesta/Code/Core/Siesta.PlatformCommon/Public/Interfaces/: IPlatform.h  IPlatformWindow.h
Siesta/Code/Editor/: CMakeLists.txt
Siesta/Code/Editor/Editor/: CMakeLists.txt
Siesta/Code/Editor/Siesta.Editor/: CMakeLists.txt
Siesta/Code/Engine/: CMakeLists.txt
Siesta/Code/Engine/Engine/: CMakeLists.txt
Siesta/Code/Engine/RenderCore/: CMakeLists.txt
Siesta/Code/Engine/RenderD3D12/: CMakeLists.txt
Siesta/Code/Engine/Renderer/: CMakeLists.txt
Siesta/Code/Engine/ShaderCompiler/: CMakeLists.txt
Siesta/Code/Engine/Siesta.Engine/: CMakeLists.txt
Siesta/Code/Engine/Siesta.RenderCore/: CMakeLists.txt
Siesta/Code/Engine/Siesta.RenderD3D12/: CMakeLists.txt
Siesta/Code/Engine/Siesta.Renderer/: CMakeLists.txt
Siesta/Code/Engine/Siesta.ShaderCompiler/: CMakeLists.txt
Siesta/Code/Engine/Siesta.ShaderCompiler/Private/: ShaderCompiler.cpp
Siesta/Code/Engine/Siesta.ShaderCompiler/Private/DXC/: ShaderCompilerDXC.cpp.inl  ShaderCompilerDXC.h
Siesta/Code/Engine/Siesta.ShaderCompiler/Public/: ShaderCompiler.h
Siesta/Code/Siesta-Backends/: CMakeLists.txt
Siesta/Code/Siesta-Backends/Siesta-PlatformGLFW/: CMakeLists.txt
Siesta/Code/Siesta-Core/: CMakeLists.txt
Siesta/Code/Siesta-Core/Private/: Core.cpp  (+7 more)
Siesta/Code/Siesta-Editor/: CMakeLists.txt
Siesta/Code/Siesta-Engine/: CMakeLists.txt
Siesta/Code/Siesta-Engine/Private/: Engine.cpp  SiestaEngine.cpp
Siesta/Code/Siesta-Engine/Private/HAL/: Platform.cpp
Siesta/Code/Siesta-Engine/Private/HAL/RenderCore/: BufferUtils.cpp  CPUBlob.cpp  RenderCore.cpp  RenderTypes.cpp  ShaderCompiler.cpp  ShaderRegistry.cpp  SiestaRenderCore.cpp  SiestaShaderRegistry.cpp  WindowRenderState.cpp
Siesta/Code/Siesta-Engine/Private/HAL/RenderCore/Interfaces/: RenderAPI.cpp  RenderContext.cpp  Shader.cpp  SiestaRenderAPI.cpp  SiestaRenderContext.cpp
Siesta/Code/Siesta-Engine/Private/HAL/RenderCore/Resources/: GPUBufferResource.cpp  GPUResourceBase.cpp  GPUTextureResource.cpp
Siesta/Code/Siesta-Engine/Private/Renderer/: Renderer.cpp  RendererResolver.cpp  RendererResolver.h  SceneRenderer.cpp  SceneRenderer.h  SiestaRenderer.cpp  SiestaSceneRenderer.cpp  SiestaSceneRenderer.h
Siesta/Code/Siesta-Engine/Public/: Engine.h  Main.inl  SiestaEngine.h  SiestaMain.inl
Siesta/Code/Siesta-Engine/Public/HAL/: Platform.h  RenderCore.h
Siesta/Code/Siesta-Engine/Public/HAL/RenderCore/: BufferUtils.h  CPUBlob.h  RenderCore.h  RenderTypes.h  ShaderCompiler.h  ShaderRegistry.h  SiestaRenderTypes.h  SiestaShaderRegistry.h  WindowRenderState.h
Siesta/Code/Siesta-Engine/Public/HAL/RenderCore/Interfaces/: RenderAPI.h  RenderContext.h  RenderDevice.h  Shader.h  SiestaRenderAPI.h  SiestaRenderContext.h  SiestaRenderDevice.h  SiestaShader.h  SiestaSwapChain.h  SwapChain.h
Siesta/Code/Siesta-Engine/Public/HAL/RenderCore/Resources/: GPUBufferResource.h  GPUResourceBase.h  GPUTextureResource.h
Siesta/Code/Siesta-Engine/Public/Renderer/: Renderer.h  SiestaRenderer.h
Siesta/Scripts/: PackageProject.bat
Siesta/Scripts/Cmd/: PackageProject.bat
Siesta/Scripts/Python/: CMake.py  GenerateProjectFiles.py  PackagedBuilder.py  SiestaPythonFramework.py  Utils.py
Siesta/Shaders/: CMakeLists.txt
Siesta/Shaders/Test/: Test.hlsl
Siesta/Tools/: CMakeLists.txt
Siesta/Tools/ReflectionTool/: CMakeLists.txt
Siesta/Tools/ReflectionTool/Private/: FolderParser.cpp  FolderParser.h  HeaderGenerator.cpp  HeaderGenerator.h  Main.cpp  ReflectedTypeDatabase.cpp  ReflectedTypeDatabase.h  ReflectionGenerator.cpp  ReflectionGenerator.h  SourceGenerator.cpp  SourceGenerator.h
(+178 files in other folders)
